rgw/kafka: remove potential race condition between creation and deletion of endpoint

Fixes: https://tracker.ceph.com/issues/61254

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit bc013baccaef4a797e6b9b4bc90c93dc94dad49e)

Conflicts:
	src/rgw/rgw_kafka.cc